2000-11-07  Larry Ewing  <lewing@helixcode.com>

	* htmlrule.c (html_rule_class_init): use save_plain.
	(save_plain): add a simple rule to the text/plain output.

	* htmlclueflow.c (save_plain): use format string.

	* htmlengine-save.c (write_header): use a format string rather
	than passing the body directly.
	(html_engine_save_buffer_receiver): fix argument type.
	
	* htmlclueflow.c (string_append_nonbsp): make sure we count the
	extra bytes we lose when converting nbsp to a space.
	(save_plain): make sure we deal with byte length and character
	length where appropriate.

2000-11-07  Radek Doulik  <rodo@helixcode.com>

	* htmltextslave.c (could_remove_leading_space): new helper
	function
	(fit_line): use could_remove_leading_space
	(could_remove_leading_space): don't remove on begin of para

	* htmlengine.c (insert_text): eat space on beggining of link

	* htmlgdkpainter.c (calc_text_width): *sigh*, *sigh*, *sigh*,
	replaced painter->text_style with style, this solves random
	bad/good layout problem

2000-11-06  Larry Ewing  <lewing@helixcode.com>

	* htmlclueflow.c (save_plain): disable broken condition checks.

2000-11-04  Larry Ewing  <lewing@helixcode.com>

	* htmltext.c (save_plain): remove call to encode_text_to_8bit
	because this actually breaks the mailer which now assumes it is
	getting text/plain in utf-8 not an 8bit character set.  Also stop
	stipping the nbsp here since we can use it in the wrapping code in
	the clueflow. 

	* htmlclueflow.c (save_plain): test for nbsp properly here, and
	convert use append_nonbsp to spaces.
	(string_append_nonbsp): convert utf-8 nbsp sequence to spaces so
	that we put make things less difficult for other mailers.

	* htmlengine.c (parse_i): parse the alt attribute when parsing the
	img element.

	* htmlimage.c (copy): copy alt contents.
	(html_image_set_alt): set the contents of the alt member.
	(html_image_init): initialize alt to NULL;
	
	* htmlimage.h: add html_image_set_alt.
